--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Suncondorllc</title>
+    <title>SunCondor LLC/title>
   </head>
 
   <body>
@@ -17,8 +17,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">Suncondorllc</h1>
-          <h2 id="project_tagline">Michael Buet SunCondor Repository</h2>
+          <h1 id="project_title">SunCondor LLC/h1>
+          <h2 id="project_tagline">High-Altitude Unmanned Solar/Fuel-Cell-Powered Long Endurance Payload Platform  </h2>
 
         </header>
     </div>
