--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">SunCondor LLC/h1>
+          <h1 id="project_title">SunCondor LLC</h1>
           <h2 id="project_tagline">High-Altitude Unmanned Solar/Fuel-Cell-Powered Long Endurance Payload Platform  </h2>
 
         </header>
