--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <h1 id="project_title">SunCondor LLC</h1>
           <h2 id="project_tagline">High-Altitude Unmanned Solar/Fuel-Cell-Powered Long Endurance Payload Platform  </h2>
-
+          <img src="https://cloud.githubusercontent.com/assets/16169389/11610020/a6749bb2-9b4b-11e5-8092-325b04301d6c.JPG" />
         </header>
     </div>
 
