--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
           <h1 id="project_title">SunCondor LLC</h1>
           <h2 id="project_tagline">High-Altitude Unmanned Solar/Fuel-Cell-Powered Long Endurance Payload Platform  </h2>
+          
+          <section id="downloads">  
+            <a class="zip_download_link" href="https://github.com/michaelbuet/suncondorllc/files/52962/SunCondor.Proposal.for.Border.Solution.final_11-26.pdf">Download the PDF</a>  
+          </section>  
+
+
           <img class="top-banner" src="https://cloud.githubusercontent.com/assets/16169389/11610048/5be3f808-9b4c-11e5-9707-d38393935737.jpg" />
         </header>
     </div>
