--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to SunCondor, the Most Advanced, Most Robust All-Weather UAV for Surveillance/Worldwide Internet Payloads:</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>
+The SunCondor is the most advance all-weather, long endurance (quasi-permanent:  Designed for 5 years+ continuous duty @ 62,000feet) Unmanned Solar/Fuel-Cell-Powered surveillance payload platform, capable of:
+<ol>
+<li>Flying to almost anywhere in the world from anywhere in the world, </li>
+<li>Host almost any desired Payload:  SunCondor can be scaled up/down as needed</li>
+<li>Loiter indefinitely over designated area</li>
+<li>Track a particular target of interest from almost anywhere to almost anywhere</li>
+<li>Designed to be Mesh-network compatible, each SunCondor acting as Server, capable of daisy-chained data communications relay for Hyper-Broadband Internet communications: Can be used as a low-cost, high capacity atmospheric Internet Communications Network Server instead of satellites.</li>
+</ol>
+</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
