Adding more to main page

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to SunCondor, the Most Advanced, Most Robust All-Weather UAV for Surveillance/Worldwide Internet Payloads:</h3>
-
-<p>
-The SunCondor is the most advance all-weather, long endurance (quasi-permanent:  Designed for 5 years+ continuous duty @ 62,000feet) Unmanned Solar/Fuel-Cell-Powered surveillance payload platform, capable of:
-<ol>
-<li>Flying to almost anywhere in the world from anywhere in the world, </li>
-<li>Host almost any desired Payload:  SunCondor can be scaled up/down as needed</li>
-<li>Loiter indefinitely over designated area</li>
-<li>Track a particular target of interest from almost anywhere to almost anywhere</li>
-<li>Designed to be Mesh-network compatible, each SunCondor acting as Server, capable of daisy-chained data communications relay for Hyper-Broadband Internet communications: Can be used as a low-cost, high capacity atmospheric Internet Communications Network Server instead of satellites.</li>
-</ol>
-</p>
+          <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to SunCondor, the Most Advanced, Most Robust All-Weather UAV for Surveillance/Worldwide Internet Payloads:</h3>
+          
+          <p>
+          The SunCondor is the most advance all-weather, long endurance (quasi-permanent:  Designed for 5 years+ continuous duty @ 62,000feet) Unmanned Solar/Fuel-Cell-Powered surveillance payload platform, capable of:
+            <ol>
+              <li>Flying to almost anywhere in the world from anywhere in the world, </li>
+              <li>Host almost any desired Payload:  SunCondor can be scaled up/down as needed</li>
+              <li>Loiter indefinitely over designated area</li>
+              <li>Track a particular target of interest from almost anywhere to almost anywhere</li>
+              <li>Designed to be Mesh-network compatible, each SunCondor acting as Server, capable of daisy-chained data communications relay for Hyper-Broadband Internet communications: Can be used as a low-cost, high capacity atmospheric Internet Communications Network Server instead of satellites.</li>
+            </ol>
+          </p>
 <!--
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -55,19 +55,19 @@ The SunCondor is the most advance all-weather, long endurance (quasi-permanent: 
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
+-->
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
+<p>SunCondor is headed by Michael Buet, President &amp; CEO, and Mr. Ken Banks, Vice-President of Marketing.  SunCondor LLC technologies have been developed under a US Air Force SBIR Contract, with full wind-tunnel testing and a working model built and available now with minimal equipment needed for demo flights.</p>
+<img class="top-banner" src="https://cloud.githubusercontent.com/assets/5004148/11610688/e122fab0-9b5f-11e5-821f-51370b2576cc.jpg"/>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
     </div>
--->
+
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
