--- a/index.html
+++ b/index.html
@@ -45,26 +45,18 @@
               <li>Designed to be Mesh-network compatible, each SunCondor acting as Server, capable of daisy-chained data communications relay for Hyper-Broadband Internet communications: Can be used as a low-cost, high capacity atmospheric Internet Communications Network Server instead of satellites.</li>
             </ol>
           </p>
-<!--
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
--->
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>SunCondor is headed by Michael Buet, President &amp; CEO, and Mr. Ken Banks, Vice-President of Marketing.  SunCondor LLC technologies have been developed under a US Air Force SBIR Contract, with full wind-tunnel testing and a working model built and available now with minimal equipment needed for demo flights.</p>
-<img class="top-banner" src="https://cloud.githubusercontent.com/assets/5004148/11610688/e122fab0-9b5f-11e5-821f-51370b2576cc.jpg"/>
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+        <h3>
+          <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+          
+          <p>SunCondor is headed by Michael Buet, President &amp; CEO, and Mr. Ken Banks, Vice-President of Marketing.  SunCondor LLC technologies have been developed under a US Air Force SBIR Contract, with full wind-tunnel testing and a working model built and available now with minimal equipment needed for demo flights.
+          <img class="top-banner" src="https://cloud.githubusercontent.com/assets/5004148/11610688/e122fab0-9b5f-11e5-821f-51370b2576cc.jpg"/>
+          SunCondor is based on a Licensed Technology from Star Technology and Research, Inc., a Mt Pleasant, SC Corporation dedicated to the advancement of Aerospace and Space technologies through SBIR Grants.  STAR is headed by Mr. Jerome Person, its President &amp; CEO.  Mr. Pearson is also on the Board of SunCondor LLC.<br/><br/>
+          <a href="http://www.star-tech-inc.com/">http://www.star-tech-inc.com/</a>
+        </p>
+        <h3>
+          <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+  
+          <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
