Minor html fixes

--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
         <h3>
           <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
           
-          <p>SunCondor is headed by Michael Buet, President &amp; CEO, and Mr. Ken Banks, Vice-President of Marketing.  SunCondor LLC technologies have been developed under a US Air Force SBIR Contract, with full wind-tunnel testing and a working model built and available now with minimal equipment needed for demo flights.
+          <p>SunCondor is headed by Michael Buet, President &amp; CEO, and Mr. Ken Banks, Vice-President of Marketing.  SunCondor LLC technologies have been developed under a US Air Force SBIR Contract, with full wind-tunnel testing and a working model built and available now with minimal equipment needed for demo flights.</p>
           <img class="top-banner" src="https://cloud.githubusercontent.com/assets/5004148/11610688/e122fab0-9b5f-11e5-821f-51370b2576cc.jpg"/>
-          SunCondor is based on a Licensed Technology from Star Technology and Research, Inc., a Mt Pleasant, SC Corporation dedicated to the advancement of Aerospace and Space technologies through SBIR Grants.  STAR is headed by Mr. Jerome Person, its President &amp; CEO.  Mr. Pearson is also on the Board of SunCondor LLC.<br/><br/>
-          <a href="http://www.star-tech-inc.com/">http://www.star-tech-inc.com/</a>
-        </p>
+          <p></p>SunCondor is based on a Licensed Technology from Star Technology and Research, Inc., a Mt Pleasant, SC Corporation dedicated to the advancement of Aerospace and Space technologies through SBIR Grants.  STAR is headed by Mr. Jerome Person, its President &amp; CEO.  Mr. Pearson is also on the Board of SunCondor LLC.</p>
+          Kp><a href="http://www.star-tech-inc.com/">http://www.star-tech-inc.com/</a></p>
         <h3>
           <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
   
