Adding bio section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,53 @@
           <p>SunCondor is headed by Michael Buet, President &amp; CEO, and Mr. Ken Banks, Vice-President of Marketing.  SunCondor LLC technologies have been developed under a US Air Force SBIR Contract, with full wind-tunnel testing and a working model built and available now with minimal equipment needed for demo flights.</p>
           <img class="top-banner" src="https://cloud.githubusercontent.com/assets/5004148/11610688/e122fab0-9b5f-11e5-821f-51370b2576cc.jpg"/>
           <p></p>SunCondor is based on a Licensed Technology from Star Technology and Research, Inc., a Mt Pleasant, SC Corporation dedicated to the advancement of Aerospace and Space technologies through SBIR Grants.  STAR is headed by Mr. Jerome Person, its President &amp; CEO.  Mr. Pearson is also on the Board of SunCondor LLC.</p>
-          Kp><a href="http://www.star-tech-inc.com/">http://www.star-tech-inc.com/</a></p>
+          <p><a href="http://www.star-tech-inc.com/">http://www.star-tech-inc.com/</a></p>
+          
+        <h3>
+          BIO
+        </h3>
+        <p>
+        Jerome Pearson is President of STAR, Inc., a small business in Mount Pleasant, SC he founded in 1998 that has developed aircraft and spacecraft technology under contracts to Air Force, NASA, DARPA, and NIAC. He started as an aerospace engineer for NASA Langley and Ames during the Apollo Program, and received the NASA Apollo Achievement Award in 1969. He joined the Air Force Research Laboratory in 1971, and developed vibration control for high-power lasers and a kinetic-kill vehicle concept for SDI in the 1980’s. As Chief of the AFRL Structural Dynamics Branch, he helped develop the high-temperature acoustics test facility at Wright-Patterson AFB in Ohio, which was used for AMRAAM testing and NASP development. </p>
+<p>
+Mr. Pearson conceived many original ideas for space technology, including a propellantless maneuvering space vehicle, a Moon and Mars gravity simulator for LEO, a zero-g massmeter, and a rocket or gun plus a rotating space tether for Earth-to-space launches. He invented the space elevator, and his publication in Acta Astronautica in 1975 introduced the concept to the world spaceflight community. Arthur Clarke then contacted him for the technical background of his novel, “The Fountains of Paradise,” published in 1978. Clarke duly credited Pearson in the Afterward, but many people even today credit Clarke with the idea of the space elevator. In the 1980’s he consulted for Walt Disney World in Florida, and helped design the Communicore Pavilion. </p>
+<p>
+Mr. Pearson has degrees in engineering and geology, and is the author of nearly 100 technical articles, including invited articles for Encyclopaedia Britannica and New Scientist. He proposed a global warming solution, an explanation for the failure of SETI, and space elevators for Earth and Moon, all published in international journals. He has been interviewed on radio and TV and in You Tube videos about space elevators, lunar development, and global warming, and was featured in a Discovery Channel series on “Science of the Impossible.” He is a Fellow of the British Interplanetary Society, an Associate Fellow of the AIAA, and member of the AIAA Space Colonization Technical Committee. In 2002 was elected Member of the International Academy of Astronautics, sponsored by Sir Arthur Clarke, and is active in the IAA Commission 3 with proposals for removal of space debris.
+</p>
+<h4>
+Selected Publications:</h4>
+ 
+“MARCUS: Moon and Mars Gravity in a LEO Satellite,” with Eugene Levin, Joe Carroll, and John Oldson, IAC-08-A2.3.2, 59th International Astronautical Congress, 
+            Glasgow, Scotland, 29 Sep-2 Oct 2008.
+ 
+“LEO Mobility Vehicle for Space Situational Awareness,” with Eugene Levin and John Oldson, AIAA 2008-7689, AIAA Space 2008, San Diego, CA, 9-11 Sep 2008.
+  
+“Earth Rings for Planetary Environment Control,” with John Oldson and Eugene Levin, Acta Astronautica Vol. 58, No. 1, pp. 44-57, 2006.
+ 
+“The Lunar Space Elevator,” with Eugene Levin, John Oldson, and Harry Wykes, IAC-04-IAA.3.8.3.07, 55th International Astronautical Congress, Vancouver, Canada, 4-8 October 2004.
+ 
+"Overview of the ElectroDynamic Delivery Express (EDDE)," with J. Carroll, E. Levin, J. Oldson, and P. Hausgen, AIAA Paper 2003-4790, 39th Joint Propulsion Conference and Exhibit, Huntsville, AL, 20-23 July 2003.
+ 
+"Performance Analysis of a Wing with Multiple Winglets,"  with M. J. Smith, N. Komerath, R. Ames, O. Wong, and R. Snodgrass, AIAA Paper 2001-2407, AIAA Applied Aerodynamics Conference, Anaheim, CA, 11-14 June 2001.
+ 
+“Low-Cost Launch Systems for the Dual-Launch Concept,” IAA-00-IAA.1.1.06, presented at the 51st International Astronautical Congress, Rio de Janeiro, Brazil, 2-6 October 2000.
+ 
+“Konstantin Tsiolkovski and the Origin of the Space Elevator,” 48th IAF Congress, Torino, Italy, October 6-10, 1997, paper number IAF-97-IAA.2.1.09.
+ 
+“Tether-Assisted Disposal of Inoperative Satellites,” with T. Yasaka, Seventeenth International Symposium on Space Technology and Science, Tokyo, Japan, 20-25 May 1990.
+ 
+“Low-Cost Space Launcher and Orbital Fuel Depot,” Acta Astronautica, Vol. 19, No. 4, pp. 315-320, 1989.
+ 
+“Asteroid Retrieval by Rotary Rocket,” AIAA Aerospace Sciences Meeting, 6-10 January, 1980.  AIAA Paper 80-0116, 1980.
+ 
+“Anchored Lunar Satellites for Cislunar Transportation and Communication,” Journal of the Astronautical Sciences, Vol. XXVII, No. 1, pp. 39-62, Jan/Mar 1979.
+ 
+“The Orbital Tower:  A Spacecraft Launcher Using the Earth's Rotational Energy,” Acta Astronautica, Vol. 2, pp. 785-799, Sep/Oct 1975.
+ 
+Pearson, J., "The Moon and SETI," Acta Astronautica, Vol. 26, No. 3/4, pp. 151-155, 1992. 
+ 
+Jerome Pearson, "The Lonely Life of a Double Planet," New Scientist No. 1627, pp. 38-40, 25 August 1988. 
+
+        </p>
         <h3>
           <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
   
