--- a/index.html
+++ b/index.html
@@ -65,38 +65,38 @@ Mr. Pearson has degrees in engineering and geology, and is the author of nearly 
 </p>
 <h4>
 Selected Publications:</h4>
+ <ul>
+<li><cite>“MARCUS: Moon and Mars Gravity in a LEO Satellite,” with Eugene Levin, Joe Carroll, and John Oldson, IAC-08-A2.3.2, 59th International Astronautical Congress, 
+            Glasgow, Scotland, 29 Sep-2 Oct 2008.</cite></li>
  
-“MARCUS: Moon and Mars Gravity in a LEO Satellite,” with Eugene Levin, Joe Carroll, and John Oldson, IAC-08-A2.3.2, 59th International Astronautical Congress, 
-            Glasgow, Scotland, 29 Sep-2 Oct 2008.
- 
-“LEO Mobility Vehicle for Space Situational Awareness,” with Eugene Levin and John Oldson, AIAA 2008-7689, AIAA Space 2008, San Diego, CA, 9-11 Sep 2008.
+<li><cite>“LEO Mobility Vehicle for Space Situational Awareness,” with Eugene Levin and John Oldson, AIAA 2008-7689, AIAA Space 2008, San Diego, CA, 9-11 Sep 2008.</cite></li>
   
-“Earth Rings for Planetary Environment Control,” with John Oldson and Eugene Levin, Acta Astronautica Vol. 58, No. 1, pp. 44-57, 2006.
+<li><cite>“Earth Rings for Planetary Environment Control,” with John Oldson and Eugene Levin, Acta Astronautica Vol. 58, No. 1, pp. 44-57, 2006.</cite></li>
  
-“The Lunar Space Elevator,” with Eugene Levin, John Oldson, and Harry Wykes, IAC-04-IAA.3.8.3.07, 55th International Astronautical Congress, Vancouver, Canada, 4-8 October 2004.
+<li><cite>“The Lunar Space Elevator,” with Eugene Levin, John Oldson, and Harry Wykes, IAC-04-IAA.3.8.3.07, 55th International Astronautical Congress, Vancouver, Canada, 4-8 October 2004.</cite></li>
  
-"Overview of the ElectroDynamic Delivery Express (EDDE)," with J. Carroll, E. Levin, J. Oldson, and P. Hausgen, AIAA Paper 2003-4790, 39th Joint Propulsion Conference and Exhibit, Huntsville, AL, 20-23 July 2003.
+<li><cite>"Overview of the ElectroDynamic Delivery Express (EDDE)," with J. Carroll, E. Levin, J. Oldson, and P. Hausgen, AIAA Paper 2003-4790, 39th Joint Propulsion Conference and Exhibit, Huntsville, AL, 20-23 July 2003.</cite></li>
  
-"Performance Analysis of a Wing with Multiple Winglets,"  with M. J. Smith, N. Komerath, R. Ames, O. Wong, and R. Snodgrass, AIAA Paper 2001-2407, AIAA Applied Aerodynamics Conference, Anaheim, CA, 11-14 June 2001.
+<li><cite>"Performance Analysis of a Wing with Multiple Winglets,"  with M. J. Smith, N. Komerath, R. Ames, O. Wong, and R. Snodgrass, AIAA Paper 2001-2407, AIAA Applied Aerodynamics Conference, Anaheim, CA, 11-14 June 2001.</cite></li>
  
-“Low-Cost Launch Systems for the Dual-Launch Concept,” IAA-00-IAA.1.1.06, presented at the 51st International Astronautical Congress, Rio de Janeiro, Brazil, 2-6 October 2000.
+<li><cite>“Low-Cost Launch Systems for the Dual-Launch Concept,” IAA-00-IAA.1.1.06, presented at the 51st International Astronautical Congress, Rio de Janeiro, Brazil, 2-6 October 2000.</cite></li>
  
-“Konstantin Tsiolkovski and the Origin of the Space Elevator,” 48th IAF Congress, Torino, Italy, October 6-10, 1997, paper number IAF-97-IAA.2.1.09.
+<li><cite>“Konstantin Tsiolkovski and the Origin of the Space Elevator,” 48th IAF Congress, Torino, Italy, October 6-10, 1997, paper number IAF-97-IAA.2.1.09.</cite></li>
  
-“Tether-Assisted Disposal of Inoperative Satellites,” with T. Yasaka, Seventeenth International Symposium on Space Technology and Science, Tokyo, Japan, 20-25 May 1990.
+<li><cite>“Tether-Assisted Disposal of Inoperative Satellites,” with T. Yasaka, Seventeenth International Symposium on Space Technology and Science, Tokyo, Japan, 20-25 May 1990.</cite></li>
  
-“Low-Cost Space Launcher and Orbital Fuel Depot,” Acta Astronautica, Vol. 19, No. 4, pp. 315-320, 1989.
+<li><cite>“Low-Cost Space Launcher and Orbital Fuel Depot,” Acta Astronautica, Vol. 19, No. 4, pp. 315-320, 1989.</cite></li>
  
-“Asteroid Retrieval by Rotary Rocket,” AIAA Aerospace Sciences Meeting, 6-10 January, 1980.  AIAA Paper 80-0116, 1980.
+<li><cite>“Asteroid Retrieval by Rotary Rocket,” AIAA Aerospace Sciences Meeting, 6-10 January, 1980.  AIAA Paper 80-0116, 1980.</cite></li>
  
-“Anchored Lunar Satellites for Cislunar Transportation and Communication,” Journal of the Astronautical Sciences, Vol. XXVII, No. 1, pp. 39-62, Jan/Mar 1979.
+<li><cite>“Anchored Lunar Satellites for Cislunar Transportation and Communication,” Journal of the Astronautical Sciences, Vol. XXVII, No. 1, pp. 39-62, Jan/Mar 1979.</cite></li>
  
-“The Orbital Tower:  A Spacecraft Launcher Using the Earth's Rotational Energy,” Acta Astronautica, Vol. 2, pp. 785-799, Sep/Oct 1975.
+<li><cite>“The Orbital Tower:  A Spacecraft Launcher Using the Earth's Rotational Energy,” Acta Astronautica, Vol. 2, pp. 785-799, Sep/Oct 1975.</cite></li>
  
-Pearson, J., "The Moon and SETI," Acta Astronautica, Vol. 26, No. 3/4, pp. 151-155, 1992. 
+<li><cite>Pearson, J., "The Moon and SETI," Acta Astronautica, Vol. 26, No. 3/4, pp. 151-155, 1992. </cite></li>
  
-Jerome Pearson, "The Lonely Life of a Double Planet," New Scientist No. 1627, pp. 38-40, 25 August 1988. 
-
+<li><cite>Jerome Pearson, "The Lonely Life of a Double Planet," New Scientist No. 1627, pp. 38-40, 25 August 1988. </cite></li>
+</ol>
         </p>
         <h3>
           <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
