Adding contact information

--- a/index.html
+++ b/index.html
@@ -98,17 +98,14 @@ Selected Publications:</h4>
 <li><cite>Jerome Pearson, "The Lonely Life of a Double Planet," New Scientist No. 1627, pp. 38-40, 25 August 1988. </cite></li>
 </ol>
         </p>
-        <h3>
-          <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-  
-          <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+        </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Suncondorllc maintained by <a href="https://github.com/michaelbuet">michaelbuet</a></p>
+        <p class="copyright">Suncondorllc maintained by<br/><a href="mailto:michael.buet@gmail.com">Michael Buet</a> / 1-843-489-6505<br/>
+        <a href="mailto:kbanks@petromolectec.com">Ken Banks</a> / 1-972-741-7009</p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
