--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ Selected Publications:</h4>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Suncondorllc maintained by<br/><a href="mailto:michael.buet@gmail.com">Michael Buet</a> / 1-843-489-6505<br/>
-        <a href="mailto:kbanks@petromolectec.com">Ken Banks</a> / 1-972-741-7009</p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">SunCondor LLC website maintained by<br/><a href="mailto:michael.buet@gmail.com">Michael Buet</a> / 1-843-489-6505<br/>
+        <a href="mailto:kbanks@petromolectec.com">Ken Banks</a> / 1-972-741-7009<br/><br/>
+        Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
